--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,20 +1,17 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <div id="container">
-    <strong>Listo para crear la app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+  <ion-tabs>
+    <ion-tab-bar slot="bottom">
+      <ion-tab-button tab="menu" [routerLink]="['/home/menu']">
+        <ion-label>Menu</ion-label>
+      </ion-tab-button>
+      <ion-tab-button tab="perfil" [routerLink]="['/home/perfil']">
+        <ion-label>Perfil</ion-label>
+      </ion-tab-button>
+      <ion-tab-button tab="config" [routerLink]="['/home/config']">
+        <ion-label>Config</ion-label>
+      </ion-tab-button>
+    </ion-tab-bar>
+  </ion-tabs>
+  <router-outlet></router-outlet>
 </ion-content>
