--- a/src/app/pages/home/evento-detalle/evento-detalle.page.html
+++ b/src/app/pages/home/evento-detalle/evento-detalle.page.html
@@ -8,22 +8,36 @@
 </ion-header>
 
 <ion-content class="ion-padding">
+
+
   <ion-card *ngIf="evento">
     <ion-card-header>
       <ion-card-title>{{ evento.nombre }}</ion-card-title>
       <ion-card-subtitle>{{ evento.descripcion }}</ion-card-subtitle>
     </ion-card-header>
     <ion-card-content>
-      <p><strong>Código de invitación:</strong> {{ evento.codigoInvitacion }}</p>
+      <p>
+        <strong>Código de invitación:</strong> {{ evento.codigoInvitacion }}
+        <ion-button size="small" fill="clear" (click)="copiarCodigo(evento.codigoInvitacion)">
+          <ion-icon [name]="copiado ? 'checkmark-outline' : 'copy-outline'" slot="icon-only"></ion-icon>
+        </ion-button>
+      </p>
       <p><strong>Fecha de creación:</strong> {{ evento.fechaCreacion?.toString() | date:'medium' }}</p>
-      <!-- Aquí puedes agregar más detalles del evento -->
     </ion-card-content>
   </ion-card>
+
+
+
+
+  <!-- For para array de Asistencias Futuras -->
   <ion-list>
+
+
+
     <ion-list-header>Asistencias asociadas</ion-list-header>
     <ion-item *ngFor="let asistencia of asistenciasFuturas">
       <ion-label class="ion-text-wrap">
-        <h2>Asistencia (Futura)</h2>
+        <h2>{{asistencia.titulo}}</h2>
         <p><strong>Descripción:</strong> {{ asistencia.descripcion }}</p>
         <p><strong>Horario:</strong> {{ asistencia.horaInicio }} - {{ asistencia.horaFin }}</p>
         <p><strong>Fecha:</strong> {{ asistencia.fecha }}</p>
@@ -34,38 +48,60 @@
         </p>
       </ion-label>
     </ion-item>
+
+
+
+
+    <!-- For para array de Asistencias En Curso -->
     <ion-item *ngFor="let asistencia of asistenciasEnCurso">
-      <ion-label class="ion-text-wrap">
-        <h2>Asistencia (En curso)</h2>
+      <ion-label class="ion-text-wrap" id="{{asistencia.id}}">
+        <h2>{{asistencia.titulo}} (En curso)</h2>
         <p><strong>Descripción:</strong> {{ asistencia.descripcion }}</p>
         <p><strong>Horario:</strong> {{ asistencia.horaInicio }} - {{ asistencia.horaFin }}</p>
         <p><strong>Fecha:</strong> {{ asistencia.fecha }}</p>
         <p><strong>Lugar:</strong> {{ asistencia.nombreLugar }}</p>
         <p><strong>Dirección:</strong> {{ asistencia.direccion }}</p>
+        <p><strong>Dirección:</strong> {{ asistencia.eventoId }}</p>
         <p style="color: red; font-weight: bold;">
           {{ getTiempoRestanteEnCurso(asistencia) }}
         </p>
       </ion-label>
       <ion-button color="success" (click)="abrirModalCodigo(asistencia)">Marcar asistencia</ion-button>
     </ion-item>
+
+
+
+
+    <!-- For para array de Asistencias pasadas -->
     <ion-item *ngFor="let asistencia of asistenciasPasadas">
       <ion-label class="ion-text-wrap">
-        <h2>Asistencia (Pasada)</h2>
+        <h2>{{asistencia.titulo}} (Pasada)</h2>
         <p><strong>Descripción:</strong> {{ asistencia.descripcion }}</p>
         <p><strong>Horario:</strong> {{ asistencia.horaInicio }} - {{ asistencia.horaFin }}</p>
         <p><strong>Fecha:</strong> {{ asistencia.fecha }}</p>
         <p><strong>Lugar:</strong> {{ asistencia.nombreLugar }}</p>
         <p><strong>Dirección:</strong> {{ asistencia.direccion }}</p>
       </ion-label>
+      <ion-button color="yellow">Ver presentes</ion-button>
     </ion-item>
+
   </ion-list>
+
+
+
 
   <ion-button expand="block" color="primary" (click)="abrirModalAsistencia()">
     Agregar asistencia futura
   </ion-button>
 
+
+
+
+  <!-- Vista del modal para agregar asisitencias -->
   <ion-modal [isOpen]="modalAsistenciaAbierto" (didDismiss)="cerrarModalAsistencia()">
+
     <ng-template>
+
       <ion-header>
         <ion-toolbar>
           <ion-title>Agregar asistencia futura</ion-title>
@@ -76,41 +112,73 @@
           </ion-buttons>
         </ion-toolbar>
       </ion-header>
+
+
       <ion-content class="ion-padding">
+
+        <ion-item>
+          <ion-label position="floating">Titulo</ion-label>
+          <ion-input [(ngModel)]="nuevaAsistencia.titulo" type="text"></ion-input>
+        </ion-item>
+
         <ion-item>
           <ion-label position="floating">Fecha (dd-mm-aaaa)</ion-label>
-          <ion-input [(ngModel)]="nuevaAsistencia.fecha" type="text" placeholder="Ej: 25-05-2025" (input)="onFechaInput($event)"></ion-input>
+          <ion-input [(ngModel)]="nuevaAsistencia.fecha" type="text" placeholder="Ej: 25-05-2025"
+            (input)="onFechaInput($event)"></ion-input>
         </ion-item>
+
         <ion-item>
           <ion-label position="floating">Hora de inicio (HH:mm)</ion-label>
-          <ion-input [(ngModel)]="nuevaAsistencia.horaInicio" type="text" placeholder="Ej: 14:30" (input)="onHoraInput($event, 'horaInicio')"></ion-input>
+          <ion-input [(ngModel)]="nuevaAsistencia.horaInicio" type="text" placeholder="Ej: 14:30"
+            (input)="onHoraInput($event, 'horaInicio')"></ion-input>
         </ion-item>
+
         <ion-item>
           <ion-label position="floating">Hora de fin (HH:mm)</ion-label>
-          <ion-input [(ngModel)]="nuevaAsistencia.horaFin" type="text" placeholder="Ej: 16:00" (input)="onHoraInput($event, 'horaFin')"></ion-input>
+          <ion-input [(ngModel)]="nuevaAsistencia.horaFin" type="text" placeholder="Ej: 16:00"
+            (input)="onHoraInput($event, 'horaFin')"></ion-input>
         </ion-item>
+
         <ion-item>
           <ion-label position="floating">Descripción</ion-label>
           <ion-input [(ngModel)]="nuevaAsistencia.descripcion" type="text"></ion-input>
         </ion-item>
+
         <ion-item>
           <ion-label position="floating">Lugar</ion-label>
           <ion-input [(ngModel)]="nuevaAsistencia.nombreLugar" type="text"></ion-input>
         </ion-item>
+
         <ion-item>
           <ion-label position="floating">Dirección</ion-label>
           <ion-input [(ngModel)]="nuevaAsistencia.direccion" type="text"></ion-input>
         </ion-item>
+
+        <ion-item>
+          <ion-label position="floating">Cantidad de colaboradores</ion-label>
+          <ion-input [(ngModel)]="nuevaAsistencia.cantColaboradores" type="number"></ion-input>
+        </ion-item>
+
         <ion-button expand="block" color="success" (click)="agregarAsistenciaFutura()">Agregar</ion-button>
         <div *ngIf="errorMsg" style="color: red; margin-top: 16px; text-align: center;">
           {{ errorMsg }}
         </div>
+
       </ion-content>
+
     </ng-template>
+
   </ion-modal>
 
+
+
+
+
+  <!-- Modal que muestra el codigo qque tiene que mostrar el administrador -->
   <ion-modal [isOpen]="modalCodigoAbierto" (didDismiss)="cerrarModalCodigo()">
+
     <ng-template>
+
       <ion-header>
         <ion-toolbar>
           <ion-title>Código de asistencia</ion-title>
@@ -121,23 +189,19 @@
           </ion-buttons>
         </ion-toolbar>
       </ion-header>
+
+
       <ion-content class="ion-padding" style="text-align:center;">
         <h2 style="margin-top: 2rem;">Código para marcar asistencia</h2>
         <div style="font-size: 2.5rem; font-weight: bold; color: #3880ff; margin: 2rem 0;">
-          {{ codigoAsistencia }}
+          {{ codigoAsistencia?.codigo }}
         </div>
         <p>Entrega este código al usuario para registrar su asistencia.</p>
       </ion-content>
+
+
     </ng-template>
+
   </ion-modal>
 
-  <ion-card *ngIf="mostrarPresencialidad">
-    <ion-card-header>
-      <ion-card-title>Marcar presencialidad</ion-card-title>
-    </ion-card-header>
-    <ion-card-content>
-      <p>Aquí se mostrará dónde y cuándo se va a marcar la presencialidad.</p>
-      <!-- Aquí puedes agregar inputs para fecha, lugar, etc. -->
-    </ion-card-content>
-  </ion-card>
 </ion-content>
