--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,21 +1,7 @@
-<!--<ion-tabs>
-  <ion-tab-bar slot="bottom">
-    <ion-tab-button tab="menu" [routerLink]="['/home/menu']">
-      <ion-label>Menu</ion-label>
-    </ion-tab-button>
-    <ion-tab-button tab="perfil" [routerLink]="['/home/perfil']">
-      <ion-label>Perfil</ion-label>
-    </ion-tab-button>
-    <ion-tab-button tab="config" [routerLink]="['/home/config']">
-      <ion-label>Config</ion-label>
-    </ion-tab-button>
-  </ion-tab-bar>
-  <ion-router-outlet></ion-router-outlet>
-</ion-tabs>
-<ion-button expand="block" color="danger" (click)="logout()">
-  <ion-icon name="log-out-outline" slot="start"></ion-icon>
-  Cerrar sesión
-</ion-button>-->
+<!-- Contenido de las paginas  -->
+<ion-content>
+  <router-outlet></router-outlet>
+</ion-content>
 
 <ion-tabs>
   <ion-tab-bar slot="bottom">
@@ -25,11 +11,9 @@
     <ion-tab-button tab="perfil" [routerLink]="['/home/perfil']">
       <ion-label>Perfil</ion-label>
     </ion-tab-button>
-    <ion-tab-button tab="config" [routerLink]="['/home/config']">
-      <ion-label>Config</ion-label>
+    <ion-tab-button tab="login" (click)="logout()">
+      <ion-label>Cerrar Sesión</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 
-  <router-outlet></router-outlet>
 </ion-tabs>
-
