--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -4,14 +4,17 @@
 </ion-content>
 
 <ion-tabs>
-  <ion-tab-bar slot="bottom">
+  <ion-tab-bar slot="bottom" class="alto">
     <ion-tab-button tab="menu" [routerLink]="['/home/menu']">
+      <ion-icon name="bookmark-outline"></ion-icon>
       <ion-label>Menu</ion-label>
     </ion-tab-button>
     <ion-tab-button tab="perfil" [routerLink]="['/home/perfil']">
+      <ion-icon name="person-circle-outline"></ion-icon>
       <ion-label>Perfil</ion-label>
     </ion-tab-button>
     <ion-tab-button tab="login" (click)="logout()">
+      <ion-icon name="exit-outline"></ion-icon>
       <ion-label>Cerrar Sesión</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
