--- a/src/app/pages/home/menu/menu.page.scss
+++ b/src/app/pages/home/menu/menu.page.scss
@@ -35,3 +35,22 @@ ion-fab[vertical="bottom"][horizontal="end"] {
   bottom: 24px;
   z-index: 1000;
 }
+
+ion-list, ion-header {
+  background-color: #d9d9d9 !important;
+  
+}
+
+.centrado {
+  padding-left: 1%;
+  padding-bottom: 0.5%;
+  padding-top: 0.25%;
+}
+
+ion-item, ion-toolbar{
+  --background: transparent;
+}
+
+.boton {
+    background-color: #06b9a7;
+}
