--- a/src/global.scss
+++ b/src/global.scss
@@ -34,4 +34,16 @@
 
 /* @import "@ionic/angular/css/palettes/dark.always.css"; */
 /* @import "@ionic/angular/css/palettes/dark.class.css"; */
-@import "@ionic/angular/css/palettes/dark.system.css";
+/* @import "@ionic/angular/css/palettes/dark.system.css"; */
+
+ion-card, ion-card-content, ion-list, ion-item, ion-label {
+  background-color: #d9d9d9;
+}
+
+.boton {
+    background-color: #06b9a7;
+}
+
+.barra {
+    background-color: #06b9a7;
+}
