--- a/src/app/pages/home/menu/menu.page.scss
+++ b/src/app/pages/home/menu/menu.page.scss
@@ -52,5 +52,9 @@ ion-item, ion-toolbar{
 }
 
 .boton {
-    background-color: #06b9a7;
+    --background: #06b9a7;
+}
+
+.boton2 {
+    --background: #06b9a7;
 }
