--- a/src/app/pages/home/evento-detalle/evento-detalle.page.html
+++ b/src/app/pages/home/evento-detalle/evento-detalle.page.html
@@ -1,4 +1,15 @@
 <ion-header>
+    <ion-toolbar>
+        <ion-title class="titleLogo">
+            <div class="divHeader">
+                <img src="assets\icon\icono_ocultar.png" alt="Logo de la app">
+                <span class="padeando">App</span>
+            </div>
+        </ion-title>
+    </ion-toolbar>
+</ion-header>
+
+<ion-header>
   <ion-toolbar>
     <ion-title>Detalle del Evento</ion-title>
     <ion-buttons slot="start">
