--- a/src/app/pages/home/menu/menu.page.html
+++ b/src/app/pages/home/menu/menu.page.html
@@ -1,3 +1,14 @@
+<ion-header>
+    <ion-toolbar>
+        <ion-title class="titleLogo">
+            <div class="divHeader">
+                <img src="assets\icon\icono_ocultar.png" alt="Logo de la app">
+                <span class="padeando">App</span>
+            </div>
+        </ion-title>
+    </ion-toolbar>
+</ion-header>
+
 <ion-content [fullscreen]="true">
 
   <ion-header class="centrado">
