--- a/src/app/pages/home/evento-detalle/evento-detalle.page.html
+++ b/src/app/pages/home/evento-detalle/evento-detalle.page.html
@@ -2,7 +2,7 @@
     <ion-toolbar>
         <ion-title class="titleLogo">
             <div class="divHeader">
-                <img src="assets\icon\icono_ocultar.png" alt="Logo de la app">
+                <img src="assets\icon\Logo PNG.png" alt="Logo de la app">
                 <span class="padeando">App</span>
             </div>
         </ion-title>
