--- a/src/app/pages/home/evento-detalle/evento-detalle.page.html
+++ b/src/app/pages/home/evento-detalle/evento-detalle.page.html
@@ -3,7 +3,7 @@
         <ion-title class="titleLogo">
             <div class="divHeader">
                 <img src="assets\icon\Logo PNG.png" alt="Logo de la app">
-                <span class="padeando">App</span>
+                <span class="padeando">AsApp</span>
             </div>
         </ion-title>
     </ion-toolbar>
